# mingw_lib_audit

./: .gitignore  CMakeLists.txt  build.sh  fetch_libs.sh  openal_playback.cpp  opengl_triangle_test.cpp  opengl_triangle_test2.cpp
cmake/: FindFreetype.cmake  FindOpenAL.cmake  Findepoxy.cmake
